--- a/adsb.ipynb
+++ b/adsb.ipynb
@@ -35,7 +35,7 @@
     "<img src=\"sdrpic.jpg\" width=\"500\"/>\n",
     "</div>\n",
     "\n",
-    "For this project, I wrote a custom Python interface for my SDR to set parameters pythonically.  This interface, which can be viewd in ./radio.py, enables me to start and stop collection, set gain, set center frequency and set the sample rate.  This should be all we need to start collecting some samples!"
+    "For this project, I wrote a custom Python interface for my SDR to set parameters pythonically.  This interface, which can be viewed in ./radio.py, enables me to start and stop collection, set gain, set center frequency and set the sample rate.  This should be all we need to start collecting some samples!"
    ]
   },
   {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "ef242065",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
    "id": "f8436d5d",
    "metadata": {},
    "source": [
-    "## Now, lets visualize some data\n",
+    "## Now, let's visualize some data\n",
     "\n",
     "Rather than go through the process of collecting new data with the SDR, I have saved off a sample that I collected previously and that I know has data in it.  This ensures that we will have something to detect and decode!\n",
     "\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "c0f3b10f",
    "metadata": {},
    "outputs": [
@@ -123,25 +123,25 @@
    "source": [
     "## Detection\n",
     "\n",
-    "We see some energy in the plot above but how do we know that this is ADSB?  We can use a match filter against the known training sequence to determine (to some degree of certainty) if the energy is ADSB.  First, lets better understand the structure of an ADSB packet by looking at a diagram:\n",
+    "We see some energy in the plot above but how do we know that this is ADSB? We can use a match filter against the known training sequence to determine (to some degree of certainty) if the energy is ADSB. First, lets better understand the structure of an ADSB packet by looking at a diagram:\n",
     "\n",
     "<div>\n",
     "<img src=\"adsb-packet.png\" width=\"500\"/>\n",
     "</div>\n",
     "\n",
-    "For the detection portion of this project, we are concerned with the Preamble.  The preamble contains a unique, fixed pattern of bits that is used to identify this packet as ADSB.  If we know this pattern, we can use a match filter to extract possible packets from streams of data.\n",
+    "For the detection portion of this project, we are concerned with the preamble. The preamble contains a unique, fixed pattern of bits that is used to identify this packet as ADSB. If we know this pattern, we can use a match filter to extract possible packets from streams of data.\n",
     "\n",
-    "Match filters are implemented using cross correlation.  Below is a helpful visualization of how cross correlation works:\n",
+    "Match filters are implemented using cross correlation. Below is a helpful visualization of how cross correlation works:\n",
     "\n",
     "![title](Comparison_convolution_correlation.svg.png)\n",
     "\n",
-    "My implementaion of the cross correlation algorithm can be viewed in ./detection.py.  The steps are as follows:\n",
+    "My implementation of the cross correlation algorithm can be viewed in ./detection.py. The steps are as follows:\n",
     "\n",
-    "    - Calculate the standard deviation of the signal and define a threshold\n",
-    "    - Identify premable canditates with power above threshold\n",
-    "    - Create a window in the data stream that is the size of the preamble\n",
-    "    - Calculate the mean of that window and normalize\n",
-    "    - Run cross correlation on window and determine likelyhood of match to preamble\n",
+    "- Calculate the standard deviation of the signal and define a threshold\n",
+    "- Identify preamble candidates with power above threshold\n",
+    "- Create a window in the data stream that is the size of the preamble\n",
+    "- Calculate the mean of that window and normalize\n",
+    "- Run cross correlation on window and determine if match to preamble\n",
     "\n",
     "The cross correlation itself is essentially a implementation of the following function in python:\n",
     "\n",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "62f91f3e",
    "metadata": {},
    "outputs": [
@@ -177,16 +177,16 @@
    "source": [
     "## Success!\n",
     "\n",
-    "We can see from the above printout that our match filter identified some ADSB training sequences, indentified as starting indices in our data stream.  Its possible that these are all valid packets or some might be noise.  The next step is to run this through our demodulator and see if any resolve.\n",
+    "We can see from the above printout that our match filter identified some ADSB training sequences, identified as starting indices in our data stream. Its possible that these are all valid packets or some might be noise. The next step is to run this through our demodulator and see if any resolve.\n",
     "\n",
-    "For this project, I have actually written two separate demodulators. ./demod_2.py is a demodulator that I wrote and ./demod.py is a demodulator that utilizes a library called pyModeS.  While extracting some information from an ADSB packet can be relatively easy, extracting the entire packet can be a bit complicated.  The version that I wrote only extracts a few fields from the packet including flight id, position and heading.  For the purposs of this demo, I will use the pyModeS version which extracts all fields but I will describe the algorithm I wrote in more detail.\n",
+    "For this project, I have actually written two separate demodulators. ./demod_2.py is a demodulator that I wrote and ./demod.py is a demodulator that utilizes a library called PyModeS. While extracting some information from an ADSB packet can be relatively easy, extracting the entire packet can be a bit complicated. The version that I wrote only extracts a few fields from the packet including flight id, position and heading. For the purposes of this demo, I will use the PyModeS version which extracts all fields but I will describe the algorithm I wrote in more detail.\n",
     "\n",
-    "The demodulator algorithm starts by using the known size of the preamble and the starting index of the detect to identify where the data portion of the packet begins.  Then, assuming a Manchester Encoding, it loops through each sample in the packet and compares it to the next.  Since data is encoded in the transitions between bits, we can determine a one or a zero by simply comparing the power of one sample to the next.  Now we have our 'hard bits'.  To verify that this is indeed and ADSB packet we can use a Cyclic Redundancy Check.  A CRC check uses information encoded in the raw data along with a generator sequence to determine if data has been corrupted.  Running a CRC check makes sure we have valid data to feed into or decoder.  Once we are sure of our hard bits, decoding the message is a simple matter of comapring our bits to the structure of the packet!  Lets look at some decoded packets below: "
+    "The demodulator algorithm starts by using the known size of the preamble and the starting index of the detect to identify where the data portion of the packet begins. Then, assuming a Manchester Encoding, it loops through each sample in the packet and compares it to the next. Since data is encoded in the transitions between bits, we can determine a one or a zero by simply comparing the power of one sample to the next. Now we have our 'hard bits'. To verify that this is indeed and ADSB packet we can use a Cyclic Redundancy Check. A CRC check uses information encoded in the raw data along with a generator sequence to determine if data has been corrupted. Running a CRC check makes sure we have valid data to feed into or decoder. Once we are sure of our hard bits, decoding the message is a simple matter of comparing our bits to the structure of the packet! Lets look at some decoded packets below: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -225,8 +225,8 @@
       "            'position': (36.62502, -121.9057),\n",
       "            'speed': -1,\n",
       "            'speed_type': '',\n",
-      "            'time0': 1642872055.5914297,\n",
-      "            'time1': 1642872055.6073096,\n",
+      "            'time0': 1642877099.652135,\n",
+      "            'time1': 1642877099.6570957,\n",
       "            'typecode': 19,\n",
       "            'vertical_rate': -1},\n",
       " 'adfe90': {'altitude': 6375,\n",
@@ -237,8 +237,8 @@
       "            'position': (36.6237, -121.82259),\n",
       "            'speed': -1,\n",
       "            'speed_type': '',\n",
-      "            'time0': 1642872055.6085918,\n",
-      "            'time1': 1642872055.5984929,\n",
+      "            'time0': 1642877099.6580174,\n",
+      "            'time1': 1642877099.6549294,\n",
       "            'typecode': 11,\n",
       "            'vertical_rate': -1}}\n"
      ]
@@ -271,7 +271,7 @@
     "# Run the demodulator\n",
     "dmd = demod.Demod(msgs,planes)\n",
     "dmd.demod()\n",
-    "print(planes)"
+    "pprint(planes)"
    ]
   },
   {
@@ -281,12 +281,12 @@
    "source": [
     "## Display\n",
     "\n",
-    "Ok, we should hopefully have some demods now.  Lets try and plot them on a map:"
+    "Ok, we have some demods now organized by flight id. Also, thanks to PyModeS we have the full packet information. One last sanity check on our data would be to plot it. We should make sure that the plane locations make sense relative to our location. Since I am located in Monterey, CA we would expect to see some locations in close proximity."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "id": "859fae64",
    "metadata": {},
    "outputs": [
@@ -1183,6 +1183,52 @@
     "fig = px.scatter_geo(plots,lat='lat',lon='lon', hover_name=\"id\")\n",
     "fig.update_layout(title = 'World map', title_x=0.5)\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e300c54",
+   "metadata": {},
+   "source": [
+    "![title](newplot.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b66af784",
+   "metadata": {},
+   "source": [
+    "# Conclusion\n",
+    "\n",
+    "We have successfully collected, detected, demodulated, decoded and visualized ADSB! I chose to present this project because I believe it highlights some of my best skills as an engineer. Namely, being able to dive into a technically complex problem space and quickly derive valuable insights. This project is also a good example of the type of work I have been doing professionally for the last 3 years.\n",
+    "\n",
+    "### Goals\n",
+    "\n",
+    "While this project was ultimately for professional development and learning, I do hope to eventually present this data to the public in the form of web interface. Future work includes improving the data ingest pipeline and the detector in order to keep up with real time data. I have done some work on a front end interface built with React, but data still needs to be put into a database and an API developed to display data in this interface.\n",
+    "\n",
+    "### Challenges\n",
+    "\n",
+    "The biggest challenge in this project has been developing a detection algorithm speedy enough to keep up with real-time data. As can be seen in the examples above, for a small subset of data, the detection algorithm took ~30 seconds! This is way to slow for real time. Much work needs to be done in this area before moving on to real-time display of data on a web interface.\n",
+    "\n",
+    "### Contributions\n",
+    "\n",
+    "As a personal project, I was the only contributor on this project. I do owe much credit to Berkeley materials published on ADSB as well as The 1090 MHz Riddle, a free e-book by Junzui Sun.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89fa52ad",
+   "metadata": {},
+   "source": [
+    "# References\n",
+    "\n",
+    "The 1090 Megahertz Riddle: https://mode-s.org/decode/\n",
+    "\n",
+    "Cross-correlation: https://en.wikipedia.org/wiki/Cross-correlation\n",
+    "\n",
+    "ADSB Learning Materials: https://inst.eecs.berkeley.edu/\n",
+    "\n",
+    "SDR's and Python: https://pysdr.org/"
    ]
   }
  ],
